[package]
name = "bambou"
version = "0.1.0"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
description = "Library to build clients for REST APIs following Nuage Network's VSP conventions. See details at http://nuagenetworks.github.io/vsd-api-documentation/usage.html"
documentation = ""
homepage = "https://github.com/nuagenetworks/bambou-rs"
repository = "https://github.com/nuagenetworks/bambou-rs"
readme = "README.md"
keywords = ["rest"]
license-file = "LICENSE"

[dependencies]
hyper = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
reqwest = { path = "/home/corentih/rust/reqwest" }
